<resources>
    <string name="app_name">E-Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="price_format">Ksh %s</string>
    <string name="discount_format">%s OFF</string>
    <string name="menu_home">Home</string>
    <string name="market_place">Market Place</string>
    <string name="Contact_us">Contact Us</string>
    <string name="About_us">About Us</string>
    <string name="App_version">App Version</string>
    <string name="Adminpage">Admin`s Page</string>
    <string name="home_header">Featured Products</string>
    <string name="error_loading_products">Error loading products</string>
    <string name="no_products_available">No products available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_tagline">simple and mordern life.</string>
    <string name="default_web_client_id" />

</resources>