<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Contact_us" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/About_us" />
        <item
            android:id="@+id/nav_appversion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/App_version" />
        <item
            android:id="@+id/nav_adminpage"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Adminpage" />
    </group>
</menu>