<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.joseph.e_electronicshop.ui.home.HomeFragment"
        android:label="@string/market_place"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.joseph.e_electronicshop.ui.gallery.GalleryFragment"
        android:label="@string/Contact_us"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.joseph.e_electronicshop.ui.slideshow.SlideshowFragment"
        android:label="@string/About_us"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_adminpage"
        android:name="com.joseph.e_electronicshop.ui.home.AdminpageFragment"
        android:label="@string/Adminpage"
        tools:layout="@layout/fragment_adminpage" />
</navigation>